--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.534.0",
     "next": "^15.4.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "recharts": "^3.1.0",
     "swiper": "^11.2.10"
   },
